Made run.js and connected to index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>Robo Fighter</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="run.js"></script>
   </head>
   <body>
-    I am here
   </body>
 </html>
