--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <script src="run.js"></script>
   </head>
   <body>
+
+    <img src="https://robohash.org/ututu.bitmap?size=800x800" alt="">
+
   </body>
 </html>
