--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
   </head>
   <body>
 
-    <img src="https://robohash.org/ututu.bitmap?size=800x800" alt="">
+    <div id="primary-container">
+
+      <section id="combat-section">
+
+      </section>
+
+      <section id="list-section">
+
+      </section>
+
+    </div>
 
   </body>
 </html>
