Added images to combat section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <div id="primary-container">
 
       <section id="combat-section">
-
+        <article>
+          <img src="https://robohash.org/robo1.jpg" alt="">
+          <p><b>VS</b></p>
+          <img src="https://robohash.org/robo2.jpg" alt="">
+        </article>
       </section>
 
       <section id="list-section">
