Corrected layout of combat section

--- a/index.html
+++ b/index.html
@@ -12,12 +12,28 @@
 
       <section id="combat-section">
         <article>
-          <img src="https://robohash.org/robo1.jpg" alt="">
+
+          <div>
+            <p class="country-title">Country 1</p>
+            <img src="https://robohash.org/robo1.jpg" alt="">
+            <p class="details">Attack: xxx</p>
+            <p class="details">Defence: xxx</p>
+          </div>
+
           <p><b>VS</b></p>
-          <img src="https://robohash.org/robo2.jpg" alt="">
+
+          <div>
+            <p class="country-title">Country 2</p>
+            <img src="https://robohash.org/robo2.jpg" alt="">
+            <p class="details">Attack: xxx</p>
+            <p class="details">Defence: xxx</p>
+          </div>
+
         </article>
       </section>
 
+      <hr>
+      
       <section id="list-section">
 
       </section>
