Move combat section css to its own folder

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Robo Fighter</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="combat_section.css">
     <script src="run.js"></script>
   </head>
   <body>
@@ -33,7 +34,7 @@
       </section>
 
       <hr>
-      
+
       <section id="list-section">
 
       </section>
