Made css file for list section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Robo Fighter</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="combat_section.css">
+    <link rel="stylesheet" type="text/css" href="list_section.css">
     <script src="run.js"></script>
   </head>
   <body>
