Made robo images static for development

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
           <div>
             <p class="country-title">Country 1</p>
-            <img src="https://robohash.org/robo1.jpg" alt="">
+            <img src="robo1.jpg" alt="">
             <p class="details">Attack: xxx</p>
             <p class="details">Defence: xxx</p>
           </div>
@@ -26,7 +26,7 @@
 
           <div>
             <p class="country-title">Country 2</p>
-            <img src="https://robohash.org/robo2.jpg" alt="">
+            <img src="robo2.jpg" alt="">
             <p class="details">Attack: xxx</p>
             <p class="details">Defence: xxx</p>
           </div>
