Made layout to be used for each country

--- a/index.html
+++ b/index.html
@@ -38,6 +38,33 @@
 
       <section id="list-section">
 
+        <hr>
+        <article class="country-container">
+
+          <div class="country-inner-container-left">
+            <img class="flag-img" src="flag1.jpg" alt="">
+            <ul>
+              <li><b>Name</b>: The United Kingdom of Great Britain and Northern Ireland </li>
+            </ul>
+          </div>
+
+          <div class="country-inner-container-right">
+            <img class="country-robo-img" src="robo1.jpg" alt="">
+            <ul>
+              <li><b>Name</b>: The awesome robot of awesome stuff</li>
+              <li><b>Attack</b>: xxx</li>
+              <li><b>Defence</b>: xxx</li>
+            </ul>
+          </div>
+
+        </article>
+
+        <article class="combatant-button-container">
+          <div class="combatant-btn">Set robo name as combatant 1</div>
+          <div class="combatant-btn">Set robo name as combatant 2</div>
+        </article>
+        <hr>
+
       </section>
 
     </div>
