--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="primary-container">
 
       <section id="combat-section">
-        <article>
+
+        <article id="combat-panel">
 
           <div>
             <p class="country-title">Country 1</p>
