Change class combat section to panel section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="primary-container">
 
-      <section id="combat-section">
+      <section id="panel-section">
 
         <article id="combat-panel">
 
