renamed combat-section.css to combat-panel.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Robo Fighter</title>
     <link rel="stylesheet" type="text/css" href="main.css">
-    <link rel="stylesheet" type="text/css" href="combat_section.css">
+    <link rel="stylesheet" type="text/css" href="combat_panel.css">
     <link rel="stylesheet" type="text/css" href="list_section.css">
     <script src="run.js"></script>
   </head>
@@ -13,7 +13,6 @@
     <div id="primary-container">
 
       <section id="panel-section">
-
         <article id="combat-panel">
 
           <div>
