Made pie chart section work

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="stylesheet" type="text/css" href="combat_panel.css">
     <link rel="stylesheet" type="text/css" href="list_section.css">
+    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="pieChart.js"></script>
     <script src="run.js"></script>
   </head>
   <body>
@@ -13,7 +15,7 @@
     <div id="primary-container">
 
       <section id="panel-section">
-        <article id="combat-panel">
+        <!-- <article id="combat-panel">
 
           <div>
             <p class="country-title">Country 1</p>
@@ -31,7 +33,12 @@
             <p class="details">Defence: xxx</p>
           </div>
 
+        </article> -->
+
+        <article id="pie-chart">
+
         </article>
+
       </section>
 
       <hr>
