--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
     <div id="primary-container">
 
+
+
       <section id="panel-section">
         <!-- <article id="combat-panel">
 
@@ -36,9 +38,8 @@
 
         </article> -->
 
-        <article id="chart-panel">
-
-        </article>
+        <section id="chart-panel">
+        </section>
 
       </section>
 
