--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
 
     <div id="primary-container">
 
-
-
       <section id="panel-section">
+
+        <section id="nav-panel">
+          <p>Fight</p>
+          <p>Wins Per Country</p>
+          <p>Wins Per Region</p>
+        </section>
+
+        <hr>
+
         <!-- <article id="combat-panel">
 
           <div>
