corrected size of list to account for nav

--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
         <section id="chart-panel">
         </section>
 
+        <hr id="lower-divider">
       </section>
-
-      <hr>
 
       <section id="list-section">
 
