made fight button and placed common css for buttons into one class

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src="barChart.js"></script>
     <script src="pieChart.js"></script>
+    <script src="panelSelection.js"></script>
     <script src="run.js"></script>
   </head>
   <body>
@@ -25,7 +26,7 @@
 
         <hr>
 
-        <!-- <article id="combat-panel">
+        <article id="combat-panel">
 
           <div>
             <p class="country-title">Country 1</p>
@@ -43,10 +44,12 @@
             <p class="details">Defence: xxx</p>
           </div>
 
-        </article> -->
+        </article>
 
-        <section id="chart-panel">
-        </section>
+        <!-- <section id="chart-panel">
+        </section> -->
+
+        <div id="fight-btn" class="button">Click to Fight</div>
 
         <hr id="lower-divider">
       </section>
@@ -75,8 +78,8 @@
         </article>
 
         <article class="combatant-button-container">
-          <div class="combatant-btn">Set robo name as combatant 1</div>
-          <div class="combatant-btn">Set robo name as combatant 2</div>
+          <div class="combatant-btn button">Set robo name as combatant 1</div>
+          <div class="combatant-btn button">Set robo name as combatant 2</div>
         </article>
         <hr>
 
