--- a/index.html
+++ b/index.html
@@ -19,37 +19,41 @@
       <section id="panel-section">
 
         <section id="nav-panel">
-          <p>Fight</p>
-          <p>Wins Per Country</p>
-          <p>Wins Per Region</p>
+          <p id="fight-nav">Fight</p>
+          <p id="country-wins-nav">Wins Per Country</p>
+          <p id="region-wins-nav">Wins Per Region</p>
         </section>
 
         <hr>
 
-        <article id="combat-panel">
+        <div id="panel-container">
+          <article id="combat-panel">
 
-          <div>
-            <p class="country-title">Country 1</p>
-            <img src="robo1.jpg" alt="">
-            <p class="details">Attack: xxx</p>
-            <p class="details">Defence: xxx</p>
-          </div>
+            <div>
+              <p class="country-title">Country 1</p>
+              <img src="robo1.jpg" alt="">
+              <p class="details">Attack: xxx</p>
+              <p class="details">Defence: xxx</p>
+            </div>
 
-          <p><b>VS</b></p>
+            <p><b>VS</b></p>
 
-          <div>
-            <p class="country-title">Country 2</p>
-            <img src="robo2.jpg" alt="">
-            <p class="details">Attack: xxx</p>
-            <p class="details">Defence: xxx</p>
-          </div>
+            <div>
+              <p class="country-title">Country 2</p>
+              <img src="robo2.jpg" alt="">
+              <p class="details">Attack: xxx</p>
+              <p class="details">Defence: xxx</p>
+            </div>
 
-        </article>
+          </article>
 
-        <!-- <section id="chart-panel">
-        </section> -->
+          <div id="fight-btn" class="button">Click to Fight</div>
 
-        <div id="fight-btn" class="button">Click to Fight</div>
+          <!-- <section id="chart-panel">
+          </section> -->
+        </div>
+
+
 
         <hr id="lower-divider">
       </section>
