Made Fight button on nav bar open fight panel

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <hr>
 
         <div id="panel-container">
-          <article id="combat-panel">
+          <!-- <article id="combat-panel">
 
             <div>
               <p class="country-title">Country 1</p>
@@ -47,7 +47,7 @@
 
           </article>
 
-          <div id="fight-btn" class="button">Click to Fight</div>
+          <div id="fight-btn" class="button">Click to Fight</div> -->
 
           <!-- <section id="chart-panel">
           </section> -->
