removed load event listener from countryListPopulator and called method in app.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="barChart.js"></script>
     <script src="pieChart.js"></script>
     <script src="panelSelection.js"></script>
+    <script src="countryListPopulator.js"></script>
     <script src="run.js"></script>
   </head>
   <body>
@@ -60,8 +61,8 @@
         </article>
 
         <article class="combatant-button-container">
-          <div class="combatant-btn button">Set robo name as combatant 1</div>
-          <div class="combatant-btn button">Set robo name as combatant 2</div>
+          <button class="combatant-btn button" value="1">Set robo name as combatant 1</button>
+          <button class="combatant-btn button">Set robo name as combatant 2</button>
         </article>
         <hr>
 
