Change country name container from list to paragraph

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
           <div class="country-inner-container-left">
             <img class="flag-img" src="flag1.jpg" alt="">
-            <ul>
-              <li><b>Name</b>: The United Kingdom of Great Britain and Northern Ireland </li>
-            </ul>
+            <p>
+              <b>Name</b>: The United Kingdom of Great Britain and Northern Ireland
+            </p>
           </div>
 
           <div class="country-inner-container-right">
