Made robot object

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="barChart.js"></script>
     <script src="pieChart.js"></script>
     <script src="panelSelection.js"></script>
+    <script src="robot.js"></script>
     <script src="countryListPopulator.js"></script>
     <script src="run.js"></script>
   </head>
