--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="combat_panel.css">
     <link rel="stylesheet" type="text/css" href="list_section.css">
     <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="storage.js"></script>
     <script src="dice.js"></script>
     <script src="barChart.js"></script>
     <script src="pieChart.js"></script>
