--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="dice.js"></script>
     <script src="barChart.js"></script>
     <script src="pieChart.js"></script>
+    <script src="combatManager.js"></script>
     <script src="panelSelection.js"></script>
     <script src="robot.js"></script>
     <script src="countryListPopulator.js"></script>
